Lint docs with Vale

--- a/docs/tutorials/grover_with_sampler.ipynb
+++ b/docs/tutorials/grover_with_sampler.ipynb
@@ -29,13 +29,13 @@
     "\n",
     "### Unstructured search problem\n",
     "\n",
-    "In the olden days, you looked up a person's phone number in a phone book. That is an easy task if you know the person's name because a phone book is ordered alphabetically by name. However, the opposite task, that is, you are given a phone number and want to find out who it belongs to, is much more difficult. That is because a phone book is not ordered by phone numbers. This is an example of an unstructured search problem. To solve this problem with a classical computer, your best trick is to randomly pick an entry. On average, you will need to look up half of the entries ($N/2$, if $N$ is the total number of entries) to find the owner. If you have a quantum computer, however, you can use Grover's algorithm to find the owner in $\\sqrt N$ tries. That means to identify the owner in a phone book that has 1 million numbers, you only need to do 1000 tries instead of 500,000!\n",
+    "In the olden days, you looked up a person's phone number in a phone book. That is an easy task if you know the person's name because a phone book is ordered alphabetically by name. However, the opposite task, that is, you are given a phone number and want to find out who it belongs to, is much more difficult. That is because a phone book is not ordered by phone numbers. This is an example of an unstructured search problem. To solve this problem with a classical computer, your best trick is to randomly pick an entry. On average, you will need to look up half of the entries ($N/2$, if $N$ is the total number of entries) to find the owner. If you have a quantum computer, however, you can use Grover's algorithm to find the owner in $\\sqrt N$ tries. That means to identify the owner in a phone book that has 1 million numbers, you only need to access 1000 entries, rather than 500,000!\n",
     "\n",
     "### Grover's algorithm\n",
     "\n",
     "In a nutshell, Grover's algorithm uses a nice quantum trick called amplitude amplification to dramatically increase the chances of finding the correct answer - the owner of a phone number - in each try (iteration). That's all you need to know now. You don't have to understand the details about how Grover's algorithm works to apply it, because Qiskit does it for you! However, if you are interested, you can read the chapter about Grover's algorithm in [the Qiskit textbook](https://qiskit.org/textbook/ch-algorithms/grover.html).\n",
     "\n",
-    "Next, let's look at a concrete example."
+    "Next, let us look at a concrete example."
    ]
   },
   {
@@ -124,7 +124,7 @@
    "source": [
     "### Construct Grover's circuit for the problem\n",
     "\n",
-    "Now you are ready to construct the quantum circuits for Grover's algorithm for this problem. Grover's algorithm's accuracy in finding the correct answer increases with the number of iterations. Let's create two circuits with one and two iterations each to see this effect."
+    "Now you are ready to construct the quantum circuits for Grover's algorithm for this problem. Grover's algorithm's accuracy in finding the correct answer increases with the number of iterations. Let us create two circuits with one and two iterations each to see this effect."
    ]
   },
   {
@@ -158,7 +158,7 @@
    "id": "dd6d2066-073f-4d20-836a-c2690946a53b",
    "metadata": {},
    "source": [
-    "Let's look at the circuits:"
+    "Let us look at the circuits:"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "source": [
     "## Step 2: Submit the circuits to a quantum computer on the cloud\n",
     "\n",
-    "Now that the Grover's circuits are created, let's submit them to a quantum computer on the cloud by using the Sampler program."
+    "Now that the Grover's circuits are created, let us submit them to a quantum computer on the cloud by using the Sampler program."
    ]
   },
   {
@@ -281,7 +281,7 @@
    "id": "17d8307f-f3ff-4371-9286-611def049a8b",
    "metadata": {},
    "source": [
-    "Grover's algorithm determines the correct answer based on the highest probability of measurement outcomes. The `Sampler` primitive program is perfect for getting probabilities, so you will use that. In the cell below, you create an instance of the `Sampler` program, and start a Runtime session using the context manager (`with ...:`), which automatically opens and closes the session for you. \n",
+    "Grover's algorithm determines the correct answer based on the highest probability of measurement outcomes. The `Sampler` primitive program is perfect for getting probabilities, so you will use that. In the following cell, you create an instance of the `Sampler` program, and start a Runtime session using the context manager (`with ...:`), which automatically opens and closes the session for you. \n",
     "\n",
     "The `Sampler` program allows a batch submission of circuits in a job. Here you are passing a list of two circuits (Grover with 1 iteration and 2 iterations) to the Sampler but only one call is needed to sample the probability of measurement outcomes of both circuits."
    ]
@@ -326,7 +326,7 @@
    "source": [
     "## Step 3: Analyze the results\n",
     "\n",
-    "Let's look at the results:"
+    "Let us look at the results:"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "id": "d6758558",
    "metadata": {},
    "source": [
-    "Let's print out the quantum result, along with the secret string, to check the quantum computer found the correct answer."
+    "Let us print out the quantum result, along with the secret string, to check the quantum computer found the correct answer."
    ]
   },
   {
@@ -435,7 +435,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this tutorial, you have solved a small database search problem using a quantum computer. You have constructed Grover's circuits by defining a phone book search problem using the `AmplificationProblem` class in Qiskit and then submitted the circuits to run using the Sampler primitive program via Qiskit Runtime service. "
+    "In this tutorial, you have solved a small database search problem using a quantum computer. You have constructed Grover's circuits by defining a phone book search problem using the `AmplificationProblem` class in Qiskit and then submitted the circuits to run using the Sampler primitive program through Qiskit Runtime service. "
    ]
   },
   {
@@ -537,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 ('qiskit-ibm-runtime-dev')",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -551,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.13"
   },
   "vscode": {
    "interpreter": {
