--- a/docs/tutorials/Error-Suppression-and-Error-Mitigation.ipynb
+++ b/docs/tutorials/Error-Suppression-and-Error-Mitigation.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "**Mariana Bernagozzi**  \n",
     "Software Engineer @ IBM Quantum  \n",
-    "[mariana.bernagozzi@ibm.com](mariana.bernagozzi@ibm.com)\n"
+    "[mariana.bernagozzi@ibm.com](mariana.bernagozzi@ibm.com)\n",
+    "\n",
+    "<!-- vale IBMQuantum.Definitions = NO -->"
    ]
   },
   {
@@ -613,7 +615,7 @@
     }
    },
    "source": [
-    "Since there is no threshold that one must surpass before QEM becomes practical, we see error mitigation as the key to realizing useful quantum computers in the near term.\n",
+    "Since there is no threshold that one must surpass before quantum error mitigation becomes practical, we see error mitigation as the key to realizing useful quantum computers in the near term.\n",
     "\n",
     "We are developing a portfolio of different error mitigation techniques, looking for three main things:\n",
     "\n",
