--- a/docs/tutorials/chsh_with_estimator.ipynb
+++ b/docs/tutorials/chsh_with_estimator.ipynb
@@ -5,6 +5,8 @@
    "id": "bf7f865a",
    "metadata": {},
    "source": [
+    "<!-- vale IBMQuantum.Definitions = NO -->\n",
+    "\n",
     "# Demonstrate the violation of the CHSH inequality with the Estimator primitive"
    ]
   },
