Apply suggestions from code review
Co-authored-by: Rebecca Dimock <66339736+beckykd@users.noreply.github.com>

--- a/docs/tutorials/Error-Suppression-and-Error-Mitigation.ipynb
+++ b/docs/tutorials/Error-Suppression-and-Error-Mitigation.ipynb
@@ -437,7 +437,7 @@
     "3. Correction\n",
     "\n",
     "\n",
-    "Let us start with the error correction, since it was the first one to be formally discovered within the field."
+    "Let's start with the error correction, since it was the first one to be formally discovered within the field."
    ]
   },
   {
