--- a/docs/tutorials/grover_with_sampler.ipynb
+++ b/docs/tutorials/grover_with_sampler.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "In a nutshell, Grover's algorithm uses a nice quantum trick called amplitude amplification to dramatically increase the chances of finding the correct answer - the owner of a phone number - in each try (iteration). That's all you need to know now. You don't have to understand the details about how Grover's algorithm works to apply it, because Qiskit does it for you! However, if you are interested, you can read the chapter about Grover's algorithm in [the Qiskit textbook](https://qiskit.org/textbook/ch-algorithms/grover.html).\n",
     "\n",
-    "Next, let us look at a concrete example."
+    "Next, let's look at a concrete example."
    ]
   },
   {
@@ -124,7 +124,7 @@
    "source": [
     "### Construct Grover's circuit for the problem\n",
     "\n",
-    "Now you are ready to construct the quantum circuits for Grover's algorithm for this problem. Grover's algorithm's accuracy in finding the correct answer increases with the number of iterations. Let us create two circuits with one and two iterations each to see this effect."
+    "Now you are ready to construct the quantum circuits for Grover's algorithm for this problem. Grover's algorithm's accuracy in finding the correct answer increases with the number of iterations. Let's create two circuits with one and two iterations each to see this effect."
    ]
   },
   {
@@ -158,7 +158,7 @@
    "id": "dd6d2066-073f-4d20-836a-c2690946a53b",
    "metadata": {},
    "source": [
-    "Let us look at the circuits:"
+    "Let's look at the circuits:"
    ]
   },
   {
@@ -232,7 +232,7 @@
    "source": [
     "## Step 2: Submit the circuits to a quantum computer on the cloud\n",
     "\n",
-    "Now that the Grover's circuits are created, let us submit them to a quantum computer on the cloud by using the Sampler program."
+    "Now that the Grover's circuits are created, let's submit them to a quantum computer on the cloud by using the Sampler program."
    ]
   },
   {
@@ -326,7 +326,7 @@
    "source": [
     "## Step 3: Analyze the results\n",
     "\n",
-    "Let us look at the results:"
+    "Let's look at the results:"
    ]
   },
   {
@@ -383,7 +383,7 @@
    "id": "d6758558",
    "metadata": {},
    "source": [
-    "Let us print out the quantum result, along with the secret string, to check the quantum computer found the correct answer."
+    "Let's print out the quantum result, along with the secret string, to check the quantum computer found the correct answer."
    ]
   },
   {
