--- a/docs/tutorials/qpe_with_sampler.ipynb
+++ b/docs/tutorials/qpe_with_sampler.ipynb
@@ -347,7 +347,7 @@
    "source": [
     "### Analyze the results of all circuits\n",
     "\n",
-    "You can use the helper following functions to find the values for $N_1$, $P_1$, $N_2$, and $P_2$ for a phase and calculate the estimated $\\theta$. Ideally $N_2$ should be a \"neighbor\" of $N_1$ (for example, the neighbors of `1010` are `1001` and `1011`), however due to the presence of noise, the second most likely outcome may not be a neighbor of $N_1$ if the results were obtained from a real quantum system. The helper functions take the $N_2$ value only from $N_1$'s neighbors."
+    "You can use the following helper functions to find the values for $N_1$, $P_1$, $N_2$, and $P_2$ for a phase and calculate the estimated $\\theta$. Ideally $N_2$ should be a \"neighbor\" of $N_1$ (for example, the neighbors of `1010` are `1001` and `1011`), however due to the presence of noise, the second most likely outcome may not be a neighbor of $N_1$ if the results were obtained from a real quantum system. The helper functions take the $N_2$ value only from $N_1$'s neighbors."
    ]
   },
   {
