--- a/docs/tutorials/sea_with_sampler.ipynb
+++ b/docs/tutorials/sea_with_sampler.ipynb
@@ -170,7 +170,7 @@
    "id": "95ff35f5",
    "metadata": {},
    "source": [
-    "Now let us fix our parameters and sweep over the frequency with several points `num_pts`. The eigenvalues of our model Hamiltonian $H_{\\rm Pauli}$ are $\\pm \\mu$, so we need to choose a range that includes those numbers.\n",
+    "Now let's fix our parameters and sweep over the frequency with several points `num_pts`. The eigenvalues of our model Hamiltonian $H_{\\rm Pauli}$ are $\\pm \\mu$, so we need to choose a range that includes those numbers.\n",
     "\n",
     "Note that the `Parameter`s' keys and values must be separated and converted into a `List` of `List`s. The keys give us the `Parameter`s inside each circuit. In this case, we only have a single circuit, so the `List` of keys contains a single `List`. For the `Parameter` values, there is a `List` for each value of `ww`. "
    ]
