--- a/docs/tutorials/chsh_with_estimator.ipynb
+++ b/docs/tutorials/chsh_with_estimator.ipynb
@@ -89,7 +89,7 @@
     "<div class=\"alert alert-info\">\n",
     "Note\n",
     "\n",
-    "For expert users out there, we should mention there are several loopholes that must be closed when violating the inequality to claim that either locality or realism have been disproven. Please read the last paragraph (right before the \"Exercise\" section) in the CHSH chapter in [the Qiskit textbook](https://qiskit.org/textbook/ch-demos/chsh.html) for discussions.\n",
+    "For expert users out there, we should mention there are several loopholes that must be closed when violating the inequality to claim that either locality or realism have been disproven. See the last paragraph (right before the \"Exercise\" section) in the CHSH chapter in [the Qiskit textbook](https://qiskit.org/textbook/ch-demos/chsh.html) for discussions.\n",
     "\n",
     "</div>"
    ]
