--- a/docs/tutorials/Error-Suppression-and-Error-Mitigation.ipynb
+++ b/docs/tutorials/Error-Suppression-and-Error-Mitigation.ipynb
@@ -946,7 +946,7 @@
    },
    "source": [
     "### Probabilistic error cancellation\n",
-    "Probabilistic error cancellation (PEC) samples for a collection of circuits that, on average mimics a noise inverting channel to cancel out the noise in the desired computation. This process is a bit like how noise-cancelling headphones work, and produces great results, however it is not as general as other methods, and the sampling overhead is exponential.\n",
+    "Probabilistic error cancellation (PEC) samples for a collection of circuits that, on average mimics a noise inverting channel to cancel out the noise in the desired computation. This process is a bit like how noise-cancelling headphones work, and produces great results; however, it is not as general as other methods, and the sampling overhead is exponential.\n",
     "\n",
     "__Reference__: E. van den Berg, Z. Minev, A. Kandala, and K. Temme, _Probabilistic error cancellation with sparse Pauli-Lindblad models on noisy quantum processors_ [arXiv:2201.09866](https://arxiv.org/abs/2201.09866)\n",
     "\n",
